--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "url": "https://github.com/stoffern/gl-react-sharpen/issues"
   },
   "homepage": "https://github.com/stoffern/gl-react-sharpen#readme",
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.6.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
